2003/11/06 21:29 (-0500) rwmcfa1

	* GenPod.pm: using the old methods trick i've come up with a way to 
	only have xsubs pod for package methods that are bound. so ifdef'd out
	code (stuff that's not available in the compiled against version) won't
	be put into the pods. one more doc issue down.

2003/11/06 16:53 (-0500) muppetman

	* MakeHelper.pm: make the pod index have actual links.

2003/11/06 10:30 (-0500) muppetman

	* ParseXSDoc.pm: handle IN_OUTLIST arguments, which previously got
	a type of "(!!)".  note: still does not handle IN_OUT or OUT args,
	as i don't have any of those to test.

2003/11/03 14:03 muppetman

	* GenPod.pm: use the actual instance arg name rather than cutting
	up the type name.  you'd expect the arg name to be used, anyway.

2003/11/03 12:04 muppetman

	* GType.xs: (list_interfaces) watch out for unregistered interface
	classes.  complain, but don't blow up.  also, free the returned array
	of GTypes.  thanks to Bjarne Steinsbø.
	* AUTHORS: updated contributors

2003/11/02 11:54 muppetman

	* GClosure.xs: the case of the missing ref; refcount bug in
	gperl_closure_marshal kept complex objects from finalizing properly.
	kudos and thanks to marc for finding and debugging this one.

2003/11/02 16:55 muppetman

	* ParseXSDoc.pm: match void\s* instead of just void when looking for
	methods with void return.  use scalar(localtime) instead of the
	identical strftime format.

2003/11/02 16:17 muppetman

	* Glib.pm: undo my silly "atleast" version-check import stuff, and 
	do something compatible with the version check supplied by Exporter.
	we don't use Exporter because, well, we don't export anything.

2003/11/02 02:15 muppetman

	* ParseXSDoc.pm: split_aliases wasn't properly deep-copying args
	arrays.  since that's not exactly something that you'd want to do
	unless you are going to generate docs from the parser results,
	moved the splitting of aliases from parse_file() to xsdocparse()
	as canonicalize_xsubs().

2003/11/01 01:15 muppetman
