@@ -22,8 +22,6 @@ our @EXPORT = qw(
 	podify_methods
 );
 
-our %methods;
-
 =head1 NAME
 
 Glib::GenPod - POD generation utilities for Glib-based modules
@@ -466,23 +464,21 @@ sub podify_methods
 	my $str = '';
 	my $n = 0;
 
-	my $method;
 	my $package;
+	my $method;
 	#$str .= "=over\n\n";
 	foreach (@$xsubs) {
-		# if we haven't seen this pkg yet, get all of it's methods
-		$package = $_->{package};
-		methods ($package) unless ($methods{$package});
-
 		# skip unless the method is avaiable
-		$method = $_->{symname};
-		$method =~ s/.*:://;
-		unless (exists $methods{$package}{$method})
+		$_->{symname} =~ m/^(?:([\w:]+)::)?([\w]+)$/;
+		$package = $1 || $_->{package};
+		$method = $2;
+		unless ($package->can ($method))
 		{
 			# this print should only be temporary
-			print STDERR "missing: $package $method\n";
+			print STDERR "missing: $package->$method\n";
 			next;
 		}
+
 		# skip if it's a DESTROY
 		next if ($method eq 'DESTROY');
 		
@@ -798,32 +794,6 @@ sub mkdir_p {
 		$p = File::Spec->catdir ($p, shift @dirs);
 	} while (@dirs);
 }
-
-=item methods(package)
-
-Given a package name this function retrieves all methods registered to it. Used 
-to see what's bound so we know what xsubs to output into the pod files since 
-all xsubs reguardless of ifdef's will be in doc.pl.
-
-=cut
-
-# based on (and/or copied from) code at: http://dev.perl.org/perl6/rfc/335.html
-sub methods 
-{
-	my ($package) = @_;
-	$package = ref $package || $package;
-
-	no strict 'refs';
-		
-	# Based on methods_via() in perl5db.pl
-	for my $method (grep {not /^[(_]/ and 
-			defined &{${"${package}::"}{$_}}} 
-			keys %{"${package}::"}) 
-	{
-		$methods{$package}{$method} = 1;
-	}
-}
-
 
 1;
 __END__
